refactor(e2e): restructure E2E tests with honest assertions, fix RunConfig.toString()
E2E tests restructured into 3 clean locations:
  - docs/alice-facade-cmd/e2e/test_cli_categories.py — CLI commands (39 tests, 27 runnable)
  - e2e/test_dispatch.py — AgentCommand dispatch coverage (21 tests, all documented skips)
  - docs/alice-facade-tui/e2e/test_slash_commands.py — TUI slash commands (30 tests, all skips)

All tests rewritten with real behavior assertions (RunConfig field values,
PPAO lifecycle, error messages) instead of weak 'no-crash' checks.

Bug fix: RunConfig.toString() was missing 8 subAgent fields
  - Added: subAgentConnectEndpoint, subAgentList, subAgentCancelId,
    subAgentResultsId, subAgentSendId, subAgentSendMessage,
    subAgentPromptAgentId, subAgentPromptText
  - Data was stored correctly in the object but invisible in console output

Cleanup: removed 7 per-module test files, 3 legacy scene files, 3 debug scripts
  - e2e/alice_agent_e2e.py renamed to e2e/helpers.py (identical content)

Unit tests: SubAgentCmdSpec.groovy (77 tests), AgentCommandSealedHierarchySpec
updated from 14 to 21 subtypes. 201 unit tests pass, BUILD SUCCESSFUL.