@@ -46,6 +46,59 @@ updated: "2026-06-19"
   - 涵盖 CLI/TUI/Web 三种外观的运行方式、分发打包、SPI 发现原理、添加新 facade 的步骤
   - 统一 YAML 前端块格式
 
+### Tests
+
+- **E2E 测试重构: 结构化分层 + 诚实断言**: 全面重写 E2E 测试，按模块/访问路径结构化组织：
+  - 按模块分层：`docs/alice-facade-cmd/e2e/test_cli_categories.py`（CLI 测试）、`e2e/test_dispatch.py`（dispatch 测试）、`docs/alice-facade-tui/e2e/test_slash_commands.py`（TUI 测试）
+  - 按执行路径分类：META（tools/config/--help，无 PPAO）39 测试 → AGENT（run/routine/sub-agent，PPAO 生命周期）→ DISPATCH（chat 斜杠命令，JLine 文档化跳过）
+  - 诚实断言重写：所有测试从"不崩溃"升级为验证真实行为（RunConfig 字段值、PPAO 生命周期、退出码语义、错误消息内容）
+  - 真实 bug 发现：`RunConfig.toString()` 缺失 8 个子 Agent 字段（`subAgentConnectEndpoint`、`subAgentList`、`subAgentCancelId`、`subAgentResultsId`、`subAgentSendId`、`subAgentSendMessage`、`subAgentPromptAgentId`、`subAgentPromptText`）— 数据已正确存储但不可见。修复后所有子 Agent 选项在控制台日志中可见
+  - 删除冗余：移除 7 个重复的每模块测试文件、3 个旧场景文件、3 个调试脚本，合并为 3 个结构清晰的顶级测试文件。`e2e/alice_agent_e2e.py` 重命名为 `e2e/helpers.py` 作为共享基础设施
+  - 测试统计：CLI 39 测试（27 可运行 + 12 文档化跳过）、dispatch 21 测试（全跳过，参考 CLI 测试）、TUI 30 测试（全跳过，JLine 依赖）。201 单元测试通过，BUILD SUCCESSFUL
+
+### Fixes
+
+- **alice-facade-cmd/RunConfig.toString() 缺失 8 个子 Agent 字段**: `toString()` 仅包含了 `subAgentSpawnGoal` 和 `subAgentConnectName`，缺少 `subAgentConnectEndpoint`、`subAgentList`、`subAgentCancelId`、`subAgentResultsId`、`subAgentSendId`、`subAgentSendMessage`、`subAgentPromptAgentId`、`subAgentPromptText`。修复后控制台 `RunConfig` 日志完整显示所有子 Agent 字段。
+
+- **alice-core-agent/AgentExecutor — PPAO 循环永不终止 (5 处 Bug)**: 修复 Agent 在 LLM 成功返回后进入无限推理循环的问题。详见 `docs/case/infinite-loop-ppao.md`。
+  - `dispatchLlmInference` 成功路径: `Continue(Action.finish())` → `Finish(content, msg)` —— `shouldFinish()` 只认 `result instanceof Finish`，`Continue(FINISH)` 语义上永远不触发终止
+  - `dispatchLlmInference` 失败路径: `Continue(revision)` → `Failure(msg)` —— LLM 调用失败不可恢复，不应进入 Revision 重试
+  - `dispatchToolCall` 失败路径: `Continue(revision)` → `Failure(msg)` —— 同上，工具调用失败直接熔断
+  - `verifyPost`: 新增 `Finish/Failure` 短路检查 —— 终态结果不再经过审计管线，立即设置 `Phase.FINISH`
+  - `reflect`: 新增 `Phase.FINISH` 短路返回 —— `reflect` 不再将已设置的 `FINISH` 相位回退为 `REFLECTING`
+  - `loopBody` 递归: 新增 `ctx.incrementIteration()` —— 每轮 Macro 迭代递增计数器，确保 `isMaxIterationsReached()` 兜底熔断生效
+
+- **alice-facade-tui/TUI v2.0 布局重构**: 基于 `docs/alice-facade-tui/Layout.md` v2.0 重写 TUI 布局，减少固定行数并融合分割线。
+  - **合并顶部分割线到 Header**: Header 行自带 ANSI 暗色 `─` 延伸到 `[Session: xxx]` 标签，移除独立的上方分隔行，FIXED_ROWS 从 6 → 5
+  - **HeaderComponent**: 新增 `sessionLabel` 字段 + setter/getter；右侧对齐 `[Session: xxx]`；格式为 `🤖 alice-agent v0.1.0 ───────────── [Session: xxx]`
+  - **FooterComponent**: ANSI 256 色分级渲染——橙色 `#214m` 费用、蓝色 `#75m` 速率、绿色 `#118m` 模型、紫色 `#141m` 工具；新增 `stripAnsi()` helper 精确计算宽度
+  - **TuiLayout**: 移除顶部分隔行；`separator1Row` = content-input 分界，`separator2Row` = input-footer 分界；使用 ANSI dim `\033[38;5;242m` 渲染分割线
+  - **ScreenManager**: 全部 `terminal.puts(InfoCmp.Capability.*)` 替换为直接 ANSI 转义码写入 `terminal.writer()`；新增 `COMPLETION_LIST_MAX=3` 常量锁定补丁菜单边界
+  - **固定输入框补全列表硬限 3 行**: `reader.setVariable(LineReader.LIST_MAX, 3)` 防止布局偏移
+
+- **alice-bootstrap/GraalVM Native Image 构建链路**: 完整支持 `nativeCompile` 任务，解决 Windows 原生二进制 TUI 运行问题。
+  - 升级 `org.graalvm.buildtools.native` 插件至 `0.11.5`
+  - 添加 JANSI `2.4.1` + JNA `5.14.0` 显式依赖（GraalVM AOT 必需）
+  - 构建参数：`--initialize-at-run-time` 推迟 Netty/Vert.x/JANSI/JNA 初始化到运行时
+  - `--enable-native-access=ALL-UNNAMED` + `--add-opens=java.base/java.lang=ALL-UNNAMED`
+  - 反射安全调用 `AnsiConsole.systemInstall()`（`Class.forName` 动态加载）
+  - 设置 `-Dsun.stdout.encoding=UTF-8`、`-Dsun.stderr.encoding=UTF-8` 固化编码
+
+- **CI 流水线（`.github/workflows/ci.yml`）**: 新增并行 `native-image` 任务。
+  - `build` 任务：Temurin 25 + `cache: gradle` → `assemble` → `test` → `installDist` → 上传 JVM 分发包
+  - `native-image` 任务：GraalVM 25 → `gu install native-image` → `nativeCompile` → 上传原生二进制
+  - 触发条件：PR 到 `main` + push 到 `main`/`develop`
+
+- **alice-facade-tui/HeaderComponent 可见宽度计算**: 修复因未考虑 ANSI 转义码字节长度导致的 `─` 分隔线不能占满终端宽度的问题。padding 和 truncation 现在基于可见字符计数而非字符串字节长度。
+- **alice-facade-tui/FooterComponent 截断逻辑**: 修复 `plain.length() > width` 时错误截断 ANSI 码导致颜色泄漏的问题。改为逐字符遍历，仅计数可见字符，完整保留 ANSI 色码。
+- **alice-facade-tui/AliceTuiLauncher JANSI 编译错误**: 移除在 `try-catch` 块中对 `org.fusesource.jansi.AnsiConsole` 的硬编码引用，改用 `Class.forName()` 反射调用，消除编译期依赖缺失错误。
+- **alice-bootstrap/native-image 自定义配置**: 移除格式错误的 `jni-config.json`/`reflect-config.json`（对象格式应为数组），依赖插件 `generateResourcesConfigFile` 自动生成。
+- **alice-facade-tui/ScreenManager 输入光标位置错位**: 在 `runInputLoop()` 中每次 `reader.readLine()` 前添加 `\033[J`（ANSI 清除光标到屏幕底端）和 `reader.setVariable(LineReader.LINE_OFFSET, layout.inputRow())`，同步 JLine 内部光标跟踪与布局计算的实际输入行位置，解决光标显示行与输入区不匹配的问题。
+
+### CI
+
+- **`.github/workflows/ci.yml` parallel native-image build**: 新建 `native-image` 并行 job，避免所有构建强制走 GraalVM，分开缓存和构建环境。
+
 ## 20260618
 
 ### Features
